--- a/index.html
+++ b/index.html
@@ -12,5 +12,22 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
+<body>
+    <section class="p-5 text-center bg-image sec1">
+        <div class="container-fluid sec1-overlay">
+            <div class="d-flex justify-content-center h-100">
+                <h1 class="p-5 mb-5">World War Two</h1>
+
+            </div>
+        </div>
+    </section>
+    <div class="section">
+        <div class="container-fluid">
+
+        </div>
+    </div>
+
+
+</body>
 
 </html>
