--- a/index.html
+++ b/index.html
@@ -15,18 +15,72 @@
 <body>
     <section class="p-5 text-center bg-image sec1">
         <div class="container-fluid sec1-overlay">
-            <div class="d-flex justify-content-center h-100">
+            <div class="d-flex justify-content-center h-100 itemp5">
                 <h1 class="p-5 mb-5">World War Two</h1>
-
             </div>
         </div>
     </section>
     <div class="section">
         <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col text-center">
+                    Above is the iconic photo taken at the Battle of Iwo Jima on February 23, 1945.
+                </div>
+            </div>
+            <hr style="width:65%;">
+            <div class="row justify-content-center">
+                <div class="col-md-10 text-center mb-4">
+                    Read some blog posts about World War Two. Below are 3 posts about specific parts of the war.
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col text-center">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Pearl Harbor</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Views: 0</h6>
+                            <img class="card-img" src="./images/pearlharbot.jpg"/>
+                            <p class="card-text">
+                                Pearl Harbor was a devastating day for the United States, to quote Franklin D. Roosevelt, “it is a day that will live in infamy.”
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col text-center">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Jungle Warfare and the Battle of Guadalcanal</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Views: 0</h6>
+                            <img class="card-img" src="./images/jungle.jpg"/>
+                            <p class="card-text">
+                                After the war was declared on Japan by the United States, soldiers were shipped to Japan to fight. Japan had very dense jungles that US soldiers had to fight in during WWII.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col text-center">
+                    <div class="card" id="economy">
+                        <div class="card-body">
+                            <h5 class="card-title">The Economy, before, during, and after WWII</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Views: 0</h6>
+                            <img class="card-img" src="./images/economy.jpg"/>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="js/index.js"></script>
+<footer>
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            All image rights are to their respective owners.
 
         </div>
     </div>
-
+</footer>
 
 </body>
 
