--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col text-center">
-                    <div class="card">
+                    <div class="card" id="pearlharbor">
                         <div class="card-body">
                             <h5 class="card-title">Pearl Harbor</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Views: 0</h6>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="col text-center">
-                    <div class="card">
+                    <div class="card" id="guadalcanal">
                         <div class="card-body">
                             <h5 class="card-title">Jungle Warfare and the Battle of Guadalcanal</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Views: 0</h6>
