--- a/pages/ecomomy.html
+++ b/pages/ecomomy.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <title>The Economy Before, During, and After World War Two</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
