--- a/pages/guadalcanal.html
+++ b/pages/guadalcanal.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+    <title>Jungle warfare and the Battle of Guadalcanal</title>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
