--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
 
 <head>
+    <title>World War Two Blog</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
@@ -20,6 +21,63 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col text-center">
+                    Above is the iconic photo taken at the Battle of Iwo Jima on February 23, 1945.
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <section class="sec mb-5" id="pearlharbor">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <img class="card-img mt-4 mb-5" src="./images/pearlharbot.jpg" />
+                </div>
+                <div class="col-md-6 text-center">
+                    <h1 class="mt-4">Pearl Harbor</h1>
+                    <p class="mt-5">Pearl Harbor was a devastating day for the United States, to quote Franklin D.
+                        Roosevelt, “it is a day that will live in infamy.”</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <section class="sec mb-5" id="guadalcanal">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+
+                <div class="col-md-6">
+                    <img class="card-img mt-4 mb-5" src="./images/jungle.jpg" />
+                </div>
+                <div class="col-md-6 text-center">
+                    <h1 class="mt-4">Jungle Warfare and the Battle of Guadalcanal</h1>
+                    <p class="mt-5"> After the war was declared on Japan by the United States, soldiers were shipped to
+                        Japan
+                        to fight. Japan had very dense jungles that US soldiers had to fight in during WWII.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <section class="sec" id="economy">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <img class="card-img mt-4 mb-5" src="./images/economy.jpg" />
+                </div>
+                <div class="col-md-6 text-center">
+                    <h1 class="mt-4">The Economy, before, during, and after WWII</h1>
+                    <p class="mt-5">Some quick example text to build on the card title and make up the bulk
+                        of the card's content.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--
     <div class="section">
         <div class="container-fluid">
             <div class="row justify-content-center">
@@ -30,40 +88,46 @@
             <hr style="width:65%;">
             <div class="row justify-content-center">
                 <div class="col-md-10 text-center mb-4">
-                    Read some blog posts about World War Two. Below are 3 posts about specific parts of the war.
+                    Below three blog posts below to learn more about specific parts of World War Two.
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col text-center">
+            <div class="row justify-content-center mb-4">
+                <div class="col-md-9 text-center">
                     <div class="card" id="pearlharbor">
                         <div class="card-body">
                             <h5 class="card-title">Pearl Harbor</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Views: 0</h6>
-                            <img class="card-img" src="./images/pearlharbot.jpg"/>
+                            <img class="card-img" src="./images/pearlharbot.jpg" />
                             <p class="card-text">
-                                Pearl Harbor was a devastating day for the United States, to quote Franklin D. Roosevelt, “it is a day that will live in infamy.”
+                                Pearl Harbor was a devastating day for the United States, to quote Franklin D.
+                                Roosevelt, “it is a day that will live in infamy.”
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col text-center">
+            </div>
+            <div class="row justify-content-center mb-4">
+                <div class="col-md-9  text-center">
                     <div class="card" id="guadalcanal">
                         <div class="card-body">
                             <h5 class="card-title">Jungle Warfare and the Battle of Guadalcanal</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Views: 0</h6>
-                            <img class="card-img" src="./images/jungle.jpg"/>
+                            <img class="card-img" src="./images/jungle.jpg" />
                             <p class="card-text">
-                                After the war was declared on Japan by the United States, soldiers were shipped to Japan to fight. Japan had very dense jungles that US soldiers had to fight in during WWII.
+                                After the war was declared on Japan by the United States, soldiers were shipped to Japan
+                                to fight. Japan had very dense jungles that US soldiers had to fight in during WWII.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col text-center">
+            </div>
+            <div class="row justify-content-center mb-4">
+                <div class="col-md-9  text-center">
                     <div class="card" id="economy">
                         <div class="card-body">
                             <h5 class="card-title">The Economy, before, during, and after WWII</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Views: 0</h6>
-                            <img class="card-img" src="./images/economy.jpg"/>
+                            <img class="card-img" src="./images/economy.jpg" />
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -72,15 +136,16 @@
             </div>
         </div>
     </div>
+    -->
     <script src="js/index.js"></script>
-<footer>
-    <div class="container-fluid">
-        <div class="row justify-content-center">
-            All image rights are to their respective owners.
+    <footer>
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                All image rights are to their respective owners.
 
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 </body>
 
