--- a/pages/guadalcanal.html
+++ b/pages/guadalcanal.html
@@ -39,7 +39,19 @@
 
                     </p>
                     <img src="images/guadalcanal.png" class="img-fluid mb-4" />
-                   
+                    <p>
+                        Japan was stationed on this island during the early 1940s. They were construing bases,
+                        airfields, and everything they needed to stay in the war and stay at this location. The battle
+                        began in August, it was more of a 6-month operation to take Guadalcanal from the axis powers,
+                        specifically Japan. On August 7th, 1942, the United States launched an attack to seize the power
+                        of this region, which deemed to be successful. This event was similar to Pearl Harbor in the
+                        sense that it was a surprise attack on Japan. This attack was also the first time the allied
+                        powers won a battle in the Pacific which shaped the rest of the war. The Japanese were able to
+                        rebound quickly and by August 9th, 3 US destroyers were sunk by the Japanese. This was known as
+                        the Battle of Savo Island. Over the course of the next 3 months, there were many battles fought
+                        in the area of Guadalcanal. Both sides took many losses and eventually withdrew soldiers and
+                        battle vessels like destroyers and aircraft carriers. The area calmed down.
+                    </p>
                 </div>
             </div>
         </div>
