Justified the Text

--- a/pages/guadalcanal.html
+++ b/pages/guadalcanal.html
@@ -39,7 +39,7 @@
 
                     </p>
                     <img src="images/guadalcanal.png" class="img-fluid mb-4" />
-                    <p>
+                    <p class="text-justify">
                         Japan was stationed on this island during the early 1940s. They were construing bases,
                         airfields, and everything they needed to stay in the war and stay at this location. The battle
                         began in August, it was more of a 6-month operation to take Guadalcanal from the axis powers,
