--- a/pages/ecomomy.html
+++ b/pages/ecomomy.html
@@ -21,12 +21,15 @@
         </div>
     </section>
     <section>
+
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
                     <p class='text-justify'>
                         World War Two was beginning around the end of the Great Depression. The Great Depression was
-                        about ten years long and it was caused by the Stock Market Crash of 1929. A depression is when
+                        about ten years long and it was caused by the <a
+                            href="https://www.history.com/topics/great-depression/1929-stock-market-crash"> Stock Market
+                            Crash of 1929</a>. A depression is when
                         there is a contraction in economic activity. This basically means, that businesses aren’t
                         selling as much as they were before, which furthermore means that the demand for certain
                         products had lowered. The result of the Great Depression was that the global economy shrank by
@@ -34,7 +37,13 @@
                         and couldn’t support things financially.
 
                     </p>
-                    <img src="images/unemployment.jpg" class="img-fluid mb-4" />
+                    <figure class="figure">
+                        <img src="images/unemployment.jpg" class="img-fluid mb-4" />
+
+                        <figcaption class="figure-caption"> U.S. Unemployment Rate from 1930 to 1945, <a
+                                href="https://www.sjsu.edu/faculty/watkins/unemploy.jpg">SJSU.edu</a></figcaption>
+                    </figure>
+
                     <p class='text-justify'>
                         The graph above shows the unemployment rate through the 1930s into the mid-1940s. It shows how
                         the unemployment rate peaked at nearly 25% in the United States in 1933. This means that there
@@ -43,7 +52,9 @@
                         unemployment rates and the United States entering WWII. Although war is never a good thing, WWII
                         being the worst war of them all, the war helped the United States economy bounce back from the
                         depression. The fascinating part about all this was that towards the end of the war, the
-                        unemployment rate sank to nearly 1%, which shows the amount of work that was needed to support
+                        unemployment rate sank to nearly <a
+                            href="https://eh.net/encyclopedia/the-american-economy-during-world-war-ii/#:~:text=1.2%20percent">1%</a>,
+                        which shows the amount of work that was needed to support
                         the war effort. When the United States joined the war, there was an increased demand for
                         supplies to fight such as weapons, vehicles, ammunition, etc.
 
@@ -56,7 +67,13 @@
                             Liberators.</a>
 
                     </p>
-                    <img src="images/b-24Liberator.jpg" class="img-fluid mb-4" />
+                    <figure class="figure">
+                        <img src="images/b-24Liberator.jpg" class="img-fluid mb-4" />
+
+                        <figcaption class="figure-caption">B-24 Liberator in Service <a
+                                href="https://upload.wikimedia.org/wikipedia/commons/a/a1/B_24_in_raf_service_23_03_05.jpg">Wikimedia</a>
+                        </figcaption>
+                    </figure>
                     <p class="text-justify">
                         This gave the need for new workers at these factories to meet demand. The demand for the
                         unemployed was not the only demand that was needed, other groups were able to get jobs as well
@@ -71,7 +88,13 @@
                         are <a href="">Series EE</a> and <a href="">Series Is</a>
 
                     </p>
-                    <img src="images/warbond.jpg" class="img-fluid mb-4" />
+                    <figure class="figure">
+                        <img src="images/warbond.jpg" class="img-fluid mb-4" />
+
+                        <figcaption class="figure-caption">Series EE War Savings Bond <a
+                                href="https://upload.wikimedia.org/wikipedia/commons/f/ff/1944_%24100_War_Savings_Bond_Series_E_.jpg">Wikimedia</a>
+                        </figcaption>
+                    </figure>
                     <p class="text-justify">
                         Not only were people investing in savings bonds, but they also were buying homes, cars, starting
                         families, and much more. Wartime restrictions on metals, fuels, and other necessities for war
@@ -80,8 +103,16 @@
                         appliances and more. Overall, even though WWII is looked at as being dark and sad, it still is,
                         but looking into the good that came out of it brightens the topic. A good question to ask would
                         be what would the US economy look like without the war, would it look the same, would it be
-                        different? The war helped people get back to work and placed the US back onto its feet.
+                        different? Other great things came from the world economy bouncing back like the <a
+                            href="https://www.worldbank.org/en/who-we-are">World Bank</a>, the <a
+                            href="https://www.un.org/en/about-us/">UN</a>, the <a
+                            href="https://www.imf.org/en/About">IMF</a>, and later <a
+                            href="https://www.nato.int/">NATO</a>.
+                        The war helped people get back to work and placed not only the US, but the entire world back onto a better track for
+                        the furture. 
+
                     </p>
+
                 </div>
             </div>
         </div>
