--- a/pages/pearlharbor.html
+++ b/pages/pearlharbor.html
@@ -25,14 +25,23 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
                     <p class='text-justify'>
-                        Pearl Harbor was a devastating day for the United States, to quote Franklin D. Roosevelt, “it is
-                        a day that will live in infamy.” The United States didn’t want to officially enter WWII. What
+                        Pearl Harbor was a devastating day for the United States, to quote Franklin D. Roosevelt,<a
+                            href="https://www.loc.gov/resource/afc1986022.afc1986022_ms2201/?st=text">
+                            “a date which will live in infamy”
+                        </a> The United States didn’t want to officially enter WWII. What
                         pushed the US was the deadly attack on December 7th, 1941, Pearl Harbor. Pearl Harbor is a naval
                         base located in the Pacific Ocean on the island of Hawaii in Honolulu. This was a seemingly
                         unexpected attack as Pearl harbor is nearly 4,000 miles away from Japan.
 
                     </p>
-                    <img src="images/pearlharbormap.jpg" class="img-fluid mb-4" />
+                    <figure class="figure">
+                        <img src="images/pearlharbormap.jpg" class="img-fluid mb-4" />
+
+                        <figcaption class="figure-caption">Pearl Harbor Map, <a
+                                href="https://junior.scholastic.com/content/dam/classroom-magazines/junior-scholastic/issues/2017-18/112017/attack-on-pearl-harbor/JS5-112017-play-PearlHarbor-medium2.jpg">Junior
+                                Scholastic</a></figcaption>
+                    </figure>
+
                     <p class="text-justify">
                         On the morning of December 7th, at around 6 am, the first fleet of Japanese bomber planes lifted
                         off of Japanese aircraft carriers. The first fleet was led by <a
@@ -53,7 +62,13 @@
                         rich in natural resources.
 
                     </p>
-                    <img src="images/manchuria.gif" class="img-fluid mb-4" />
+                    <figure class="figure">
+                        <img src="images/manchuria.gif" class="img-fluid mb-4" />
+
+                        <figcaption class="figure-caption">Map of Manchuria, 1931 , <a
+                                href="https://i.pinimg.com/originals/19/0f/d5/190fd57aff3465ffa79c3fd667f5cec5.gif">Pinimg</a>
+                        </figcaption>
+                    </figure>
                     <p class="text-justify">
                         The attack of this region was successful for the Japanese. The Japanese held this region while
                         other allied countries such as the US refused to acknowledge that they had taken it. During this
@@ -81,7 +96,13 @@
 
 
                     </p>
-                    <img src="images/radar.jpg" class="img-fluid mb-4" />
+                    <figure class="figure">
+                        <img src="images/radar.jpg" class="img-fluid mb-4" />
+
+                        <figcaption class="figure-caption">Radar Tower <a
+                                href="http://worldwar2headquarters.com/images/PearlHarbor/pearlHarborAirFields/radar-pearl-harbor.jpg">World
+                                War Two Headquaters</a></figcaption>
+                    </figure>
                     <p class="text-justify">
                         On the morning of December 7th, 1941, two guys named Joseph Lockard and George Elliot were
                         manning the radar. The radar was typically kept on for a few hours in the morning to watch for
@@ -111,6 +132,31 @@
 
                     </p>
                 </div>
+            </div>
+            <hr>
+
+            <div class="row justify-content-center">
+                <h5>Sources:</h5> <br>
+            </div>
+            <div class="row justify-content-center">
+                <a href="https://www.history.com/topics/world-war-ii/pearl-harbor"> Pearl Harbor: Attack, Casualties and
+                    Facts - HISTORY</a>
+
+            </div>
+            <div class="row justify-content-center">
+                <a href="https://www.nationalww2museum.org/war/articles/path-pearl-harbor">The Path to Pearl Harbor</a>
+
+            </div>
+            <div class="row justify-content-center">
+                <a
+                    href="https://www.history.navy.mil/browse-by-topic/wars-conflicts-and-operations/world-war-ii/1941/pearl-harbor.html">Pearl
+                    Harbor Attack </a>
+
+            </div>
+            <div class="row justify-content-center mb-4">
+                <a href="https://www.thedailybeast.com/the-man-who-tried-to-stop-pearl-harbor">The Man Who Tried to Stop
+                    Pearl Harbor</a>
+
             </div>
         </div>
         </div>
