--- a/pages/guadalcanal.html
+++ b/pages/guadalcanal.html
@@ -34,7 +34,7 @@
                         muggy. This meant soldiers got infections and sickness due to wet clothing. Dehydration was also
                         a huge problem since the water was also limited, soldiers typically rationed out the water they
                         had so it lasted for the duration of their mission. One specific battle fought in the jungle
-                        terrain was the Battle of Guadalcanal. Guadalcanal is located in the Soloman Islands.
+                        terrain was the Battle of Guadalcanal. Guadalcanal is located in the <a href="https://www.google.com/maps/place/Solomon+Islands/@-9.2645286,152.5271508,5z/data=!3m1!4b1!4m5!3m4!1s0x68d351e0555009d1:0xb44cc0a017442980!8m2!3d-9.64571!4d160.156194">Solomon Islands</a>.
                         Guadalcanal was of course a jungle region and had an area of about 2,500 miles.
 
                     </p>
