--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
                     Above is the iconic photo taken at the Battle of Iwo Jima on February 23, 1945.
                 </div>
             </div>
+            <hr>
+            <div class="row justify-content-center">
+                <div class="col text-center">
+                    <figure>
+                        <img class="img-fluid" src="https://m.media-amazon.com/images/I/51Rxy7W82vL.jpg"/>
+                        <figcaption class="figure-caption">Goodbye, Darkness: A Memoir of the Pacific War,  <a href="https://m.media-amazon.com/images/I/51Rxy7W82vL.jpg">Amazon Media</a></figcaption>
+                    </figure>
+                    <p>
+                        The overall theme of this blog came from reading, <u> <a href="https://www.amazon.com/Goodbye-Darkness-Memoir-Pacific-War/dp/0316501115">Goodbye, Darkness: A Memoir of the Pacific War</a></u>, by
+                        William Manchester. This was an excellent book about Manchester's time as a soldier during WWII. The story he tells
+                        truly shows the struggles American soldiers went through during WWII and how it not only affected them then, it left
+                        marks on them for the rest of their lives. 
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     <hr>
