--- a/pages/ecomomy.html
+++ b/pages/ecomomy.html
@@ -115,6 +115,27 @@
 
                 </div>
             </div>
+            <div class="row justify-content-center">
+                <h5>Sources:</h5> <br>
+            </div>
+            <div class="row justify-content-center">
+                <a href="https://www.history.com/news/post-world-war-ii-boom-economy"> Post World War II Economic Boom - HISTORY</a>
+
+            </div>
+            <div class="row justify-content-center">
+                <a href="https://www.thebalance.com/world-war-ii-economic-impact-4570917">World War II Economic Impact</a>
+
+            </div>
+            <div class="row justify-content-center">
+                <a
+                    href="https://eh.net/encyclopedia/the-american-economy-during-world-war-ii/">The American Economy During World War II </a>
+
+            </div>
+            <div class="row justify-content-center mb-4">
+                <a href="https://voxeu.org/article/economics-second-world-war-seventy-five-years-new-ebook#:~:text=WWII%20was%20the%20greatest%20conflict,vast%20mobilization%20of%20productive%20effort.&text=While%20the%20major%20economies%20mobilised,demanded%2050%25%20to%2070%25.">
+                    The economics of the Second World War: Seventy-five years on – a new eBook
+                </a>
+            </div>
         </div>
     </section>
 </body>
